--- a/gi-pro-web/src/main/webapp/resources/swagger-ui.html
+++ b/gi-pro-web/src/main/webapp/resources/swagger-ui.html
@@ -35,7 +35,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://localhost:8080/gi-pro/api-docs?group=api";
+        url = "http://192.168.42.60:8080/gi-pro/api-docs?group=api";
       }
 
       // Pre load translate...
