--- a/gi-pro-mobile/www/index.html
+++ b/gi-pro-mobile/www/index.html
@@ -17,6 +17,9 @@
 	<!-- ionic/angularjs js -->
 	<script src="lib/ionic/js/ionic.bundle.js"></script>
 
+	<!-- ionic plugins -->
+    <script src="lib/ionic-wizard/ion-wizard.min.js"></script>
+
 	<!-- cordova script (this will be a 404 during development) -->
 	<script src="cordova.js"></script>
 
@@ -30,6 +33,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/services/UtilsSrv.js"></script>
 	<script src="js/services/ConfigSrv.js"></script>
+	<script src="js/services/DataSrv.js"></script>
 	<script src="js/controllers/MainCtrl.js"></script>
 	<script src="js/controllers/HomeCtrl.js"></script>
 </head>
