--- a/gi-pro-mobile/www/index.html
+++ b/gi-pro-mobile/www/index.html
@@ -13,12 +13,14 @@
 	<script src="js/config.js"></script>
 
 	<!-- libs -->
+	<script src="lib/moment/moment-with-locales.min.js"></script>
 
 	<!-- ionic/angularjs js -->
 	<script src="lib/ionic/js/ionic.bundle.js"></script>
 
 	<!-- ionic plugins -->
-    <script src="lib/ionic-wizard/ion-wizard.min.js"></script>
+	<script src="lib/ionic-datepicker/ionic-datepicker.bundle.min.js"></script>
+	<script src="lib/ionic-timepicker/ionic-timepicker.bundle.min.js"></script>
 
 	<!-- cordova script (this will be a 404 during development) -->
 	<script src="cordova.js"></script>
@@ -38,7 +40,7 @@
 	<script src="js/controllers/HomeCtrl.js"></script>
 </head>
 
-<body ng-app="toga">
+<body ng-app="toga" class="toga-app">
 	<ion-nav-view></ion-nav-view>
 </body>
 
