create/list/search offers, create/list requests

--- a/gi-pro-mobile/www/index.html
+++ b/gi-pro-mobile/www/index.html
@@ -27,6 +27,9 @@
 
 	<!-- angularJS plugins -->
 	<script src="lib/ngCordova/ng-cordova.min.js"></script>
+	<script src="lib/angular-i18n/angular-locale_it-it.js"></script>
+	<!--<script src="lib/angular-i18n/angular-locale_en-gb.js"></script>-->
+	<!--<script src="lib/angular-i18n/angular-locale_en-us.js"></script>-->
 	<script src="lib/angular-sanitize/angular-sanitize.js"></script>
 	<script src="lib/angular-translate/angular-translate.min.js"></script>
 	<script src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
@@ -38,6 +41,8 @@
 	<script src="js/services/DataSrv.js"></script>
 	<script src="js/controllers/MainCtrl.js"></script>
 	<script src="js/controllers/HomeCtrl.js"></script>
+	<script src="js/controllers/SearchCtrl.js"></script>
+	<script src="js/controllers/NewCtrl.js"></script>
 </head>
 
 <body ng-app="toga" class="toga-app">
