--- a/gi-pro-mobile/www/index.html
+++ b/gi-pro-mobile/www/index.html
@@ -41,6 +41,7 @@
 	<script src="js/services/DataSrv.js"></script>
 	<script src="js/controllers/MainCtrl.js"></script>
 	<script src="js/controllers/HomeCtrl.js"></script>
+	<script src="js/controllers/DetailsCtrl.js"></script>
 	<script src="js/controllers/SearchCtrl.js"></script>
 	<script src="js/controllers/NewCtrl.js"></script>
 </head>
