LoginCtrl e login view created

--- a/gi-pro-mobile/www/index.html
+++ b/gi-pro-mobile/www/index.html
@@ -40,6 +40,7 @@
 	<script src="js/services/ConfigSrv.js"></script>
 	<script src="js/services/DataSrv.js"></script>
 	<script src="js/controllers/MainCtrl.js"></script>
+	<script src="js/controllers/LoginCtrl.js"></script>
 	<script src="js/controllers/HomeCtrl.js"></script>
 	<script src="js/controllers/DetailsCtrl.js"></script>
 	<script src="js/controllers/SearchCtrl.js"></script>
