--- a/gi-pro-mobile/www/index.html
+++ b/gi-pro-mobile/www/index.html
@@ -38,6 +38,7 @@
 	<script src="js/app.js"></script>
 	<script src="js/services/UtilsSrv.js"></script>
 	<script src="js/services/ConfigSrv.js"></script>
+	<script src="js/services/LoginSrv.js"></script>
 	<script src="js/services/DataSrv.js"></script>
 	<script src="js/controllers/MainCtrl.js"></script>
 	<script src="js/controllers/LoginCtrl.js"></script>
