added new managing of map with leaflet

--- a/gi-pro-mobile/www/index.html
+++ b/gi-pro-mobile/www/index.html
@@ -34,6 +34,10 @@
     <script src="lib/angular-translate/angular-translate.min.js"></script>
     <script src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
 
+    <!--    leaflet-->
+    <script src="lib/angular-leaflet-directive/angular-leaflet-directive.min.js"></script>
+    <script src="lib/leaflet/leaflet.js"></script>
+    <link rel="stylesheet" href="lib/leaflet/leaflet.css">
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/services/UtilsSrv.js"></script>
@@ -42,6 +46,8 @@
     <script src="js/services/DataSrv.js"></script>
     <script src="js/services/NotifSrv.js"></script>
     <script src="js/services/PushSrv.js"></script>
+    <script src="js/services/GeoSrv.js"></script>
+    <script src="js/services/MapSrv.js"></script>
     <script src="js/controllers/MainCtrl.js"></script>
     <script src="js/controllers/LoginCtrl.js"></script>
     <script src="js/controllers/ReqAndOffCtrl.js"></script>
@@ -49,6 +55,7 @@
     <script src="js/controllers/DetailsCtrl.js"></script>
     <script src="js/controllers/SearchCtrl.js"></script>
     <script src="js/controllers/NewCtrl.js"></script>
+    <script src="js/directives/directives.js"></script>
 </head>
 
 <body ng-app="gi-pro" class="gi-pro-app">
