Working on requests

--- a/gi-pro-mobile/www/index.html
+++ b/gi-pro-mobile/www/index.html
@@ -50,7 +50,7 @@
   <script src="js/services/MapSrv.js"></script>
   <script src="js/controllers/MainCtrl.js"></script>
   <script src="js/controllers/LoginCtrl.js"></script>
-  <script src="js/controllers/ReqAndOffCtrl.js"></script>
+  <script src="js/controllers/RequestsAndOffersCtrl.js"></script>
   <script src="js/controllers/ServiceAndProfCtrl.js"></script>
   <script src="js/controllers/DetailsCtrl.js"></script>
   <script src="js/controllers/SearchCtrl.js"></script>
@@ -59,7 +59,7 @@
   <script src="js/directives/directives.js"></script>
 </head>
 
-<body ng-app="gi-pro" class="gi-pro-app">
+<body ng-app="gi-pro" class="gi-pro">
   <ion-nav-view></ion-nav-view>
 </body>
 
