New color theme, working on notifications

--- a/gi-pro-mobile/www/index.html
+++ b/gi-pro-mobile/www/index.html
@@ -5,26 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <title></title>
-
   <!-- compiled css output -->
   <link href="css/ionic.app.css" rel="stylesheet">
-
   <!-- config -->
   <script src="js/config.js"></script>
-
   <!-- libs -->
   <script src="lib/moment/moment-with-locales.min.js"></script>
-
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
-
   <!-- ionic plugins -->
   <script src="lib/ionic-datepicker/ionic-datepicker.bundle.min.js"></script>
   <script src="lib/ionic-timepicker/ionic-timepicker.bundle.min.js"></script>
-
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
-
   <!-- angularJS plugins -->
   <script src="lib/ngCordova/ng-cordova.min.js"></script>
   <script src="lib/angular-i18n/angular-locale_it-it.js"></script>
@@ -33,7 +26,6 @@
   <script src="lib/angular-sanitize/angular-sanitize.js"></script>
   <script src="lib/angular-translate/angular-translate.min.js"></script>
   <script src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
-
   <!--    leaflet-->
   <script src="lib/angular-leaflet-directive/angular-leaflet-directive.min.js"></script>
   <script src="lib/leaflet/leaflet.js"></script>
@@ -51,6 +43,7 @@
   <script src="js/controllers/MainCtrl.js"></script>
   <script src="js/controllers/LoginCtrl.js"></script>
   <script src="js/controllers/RequestsCtrl.js"></script>
+  <script src="js/controllers/NotificationsCtrl.js"></script>
   <script src="js/controllers/ServiceAndProfCtrl.js"></script>
   <script src="js/controllers/DetailsCtrl.js"></script>
   <script src="js/controllers/SearchCtrl.js"></script>
